<resources>
    <string name="app_name">MovieTime</string>
    <string name="ajouter">ajouter</string>
    <string name="API">API</string>
    <string name="ajouterGenre">ajouterGenre</string>
    <string name="ajouterFilm">ajouterFilm</string>
    <string name="FilmActivity">FilmActivity</string>
    <string name="choisis_ton_genre">Choisis ton genre</string>
    <string name="choisis_tes_genre">choisis tes genre</string>
    <string name="choisis_tes_genres">choisis tes genres</string>
    <string name="libell">Libellé :</string>
    <string name="enregister">Enregister</string>
    <string name="GenreActivity">GenreActivity</string>
    <string name="titre">Titre :</string>
    <string name="description">description :</string>
    <string name="ajoutergenrefilms">AjouterGenreFilms</string>
    <string name="AddGenreToFilmActivity">AddGenreToFilmActivity</string>
    <string name="choisis_tes_films">choisis tes films</string>
    <string name="voir_les_genres">Voir les Genres</string>
    <string name="voir_les_films">Voir les films</string>
    <string name="ajoutez_les_films_depuis_l_api">Ajoutez les films depuis l\'api !</string>
    <string name="ajouter_un_genre">Ajouter un genre</string>
    <string name="associer_film_genre">Associer Film Genre</string>
    <string name="retour">Retour</string>
    <string name="app_label">rechercher film</string>
    <string name="search_hint">recherche</string>
</resources>